--- a/ui_files/old/graphWindowAlmost.ui
+++ b/ui_files/old/graphWindowAlmost.ui
@@ -158,30 +158,6 @@
         </property>
        </spacer>
       </item>
-      <item>
-       <widget class="QPushButton" name="manualEntryButton">
-        <property name="styleSheet">
-         <string notr="true">QPushButton {
-    background-color:  rgb(255,255,255);
-    border-style: outset;
-    border-width: 2px;
-    border-radius: 10px;
-    border-color: rgb(0, 0, 120);
-    font: bold 14px;
-	color: black;
-    min-width: 10em;
-    padding: 6px;
-}
-QPushButton:pressed {
-    background-color: rgb(0, 0, 150);
-    border-style: inset;
-}</string>
-        </property>
-        <property name="text">
-         <string>Manual Entry</string>
-        </property>
-       </widget>
-      </item>
      </layout>
     </item>
     <item row="1" column="0">
@@ -307,7 +283,7 @@ QDateEdit::down-arrow {
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="documentMode">
        <bool>false</bool>
@@ -320,60 +296,7 @@ QDateEdit::down-arrow {
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QGraphicsView" name="graphicsView">
-            <property name="styleSheet">
-             <string notr="true">QScrollBar:vertical {           
-                            border: 1px solid #999999;
-                           background:white;
-                            width:10px;    
-                            margin: 0px 0px 0px 0px;
-                        }
-                       QScrollBar::handle:vertical {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120), stop:1 rgb(0,0,120));
-                            min-height: 0px;
-                        }
-                        QScrollBar::add-line:vertical {
-                           background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0px;
-                          subcontrol-position: bottom;
-                            subcontrol-origin: margin;
-                        }
-                        QScrollBar::sub-line:vertical {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0  rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0 px;
-                          subcontrol-position: top;
-                            subcontrol-origin: margin;
-                        }
-QScrollBar:horizontal {           
-                            border: 1px solid #999999;
-                           background:white;
-                            width:10px;    
-                            margin: 0px 0px 0px 0px;
-                        }
-                       QScrollBar::handle:horizontal {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120), stop:1 rgb(0,0,120));
-                            min-height: 0px;
-                        }
-                        QScrollBar::add-line:horizontal {
-                           background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0px;
-                          subcontrol-position: bottom;
-                            subcontrol-origin: margin;
-                        }
-                        QScrollBar::sub-line:horizontal {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0  rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0 px;
-                          subcontrol-position: top;
-                            subcontrol-origin: margin;
-                        }</string>
-            </property>
-           </widget>
+           <widget class="QGraphicsView" name="graphicsView"/>
           </item>
          </layout>
         </item>
@@ -387,66 +310,7 @@ QScrollBar:horizontal {
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_4">
           <item row="0" column="0">
-           <widget class="QTableView" name="tableView">
-            <property name="styleSheet">
-             <string notr="true">QScrollBar:vertical {           
-                            border: 1px solid #999999;
-                           background:white;
-                            width:10px;    
-                            margin: 0px 0px 0px 0px;
-                        }
-                       QScrollBar::handle:vertical {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120), stop:1 rgb(0,0,120));
-                            min-height: 0px;
-                        }
-                        QScrollBar::add-line:vertical {
-                           background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0px;
-                          subcontrol-position: bottom;
-                            subcontrol-origin: margin;
-                        }
-                        QScrollBar::sub-line:vertical {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0  rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0 px;
-                          subcontrol-position: top;
-                            subcontrol-origin: margin;
-                        }
-QScrollBar:horizontal {           
-                            border: 1px solid #999999;
-                           background:white;
-                            width:10px;    
-                            margin: 0px 0px 0px 0px;
-                        }
-                       QScrollBar::handle:horizontal {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120), stop:1 rgb(0,0,120));
-                            min-height: 0px;
-                        }
-                        QScrollBar::add-line:horizontal {
-                           background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0 rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0px;
-                          subcontrol-position: bottom;
-                            subcontrol-origin: margin;
-                        }
-                        QScrollBar::sub-line:horizontal {
-                            background: qlineargradient(x1:0, y1:0, x2:1, y2:0,
-                            stop: 0  rgb(0,0,120), stop: 0.5 rgb(0,0,120),  stop:1 rgb(0,0,120));
-                            height: 0 px;
-                          subcontrol-position: top;
-                            subcontrol-origin: margin;
-                        }</string>
-            </property>
-            <property name="verticalScrollBarPolicy">
-             <enum>Qt::ScrollBarAsNeeded</enum>
-            </property>
-            <property name="horizontalScrollBarPolicy">
-             <enum>Qt::ScrollBarAsNeeded</enum>
-            </property>
-           </widget>
+           <widget class="QTableView" name="tableView"/>
           </item>
          </layout>
         </item>
